--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -6,7 +6,7 @@
     font-weight: 300;  
 }
 
-@mixin body-font-light-itlaic {
+@mixin body-font-light-italic {
     font-family: 'Open Sans', helvetica, verdana, sans-serif;
     font-style: italic;
     font-weight: 300;  
@@ -24,4 +24,11 @@
     font-weight: 700;  
 }
 
+$background-color: #fff;
+$base-font-size: 22px;
 $color: #262626;
+$line-height: 1.45;
+
+@function em($px, $base: $base-font-size) { 
+    @return ($px / $base) * 1em; 
+}
